# golio/infrastructure/repository/oauth2.go
@@ -1,0 +1,92 @@
+package repository
+
+import (
+	"context"
+	"encoding/json"
+	"fmt"
+	"io"
+	"net/http"
+	"net/url"
+	"strings"
+
+	"github.com/sunjin110/folio/golio/domain/model"
+	"github.com/sunjin110/folio/golio/infrastructure/repository/dto"
+
+	oauth2_v2 "google.golang.org/api/oauth2/v2"
+)
+
+const (
+	// grantTypeCode codeを利用したやり方
+	grantTypeCode = "authorization_code"
+
+	// tokenGetURI トークンを発行するendpointです
+	tokenGetURI = "https://oauth2.googleapis.com/token"
+)
+
+type oauth2 struct {
+	svc          *oauth2_v2.Service
+	clientID     string
+	clientSecret string
+	redirectURI  string
+}
+
+func NewOAuth2(ctx context.Context) (*oauth2, error) {
+
+	svc, err := oauth2_v2.NewService(ctx)
+	if err != nil {
+		return nil, fmt.Errorf("failed oauth2_v2.NewService: %w", err)
+	}
+
+	return &oauth2{
+		svc: svc,
+	}, nil
+}
+
+// https://accounts.google.com/o/oauth2/v2/auth?client_id=682633467318-vvlia00uaag3jplkls0uj1md371k54as.apps.googleusercontent.com&redirect_uri=http://localhost:3001/auth/google-oauth/callback&response_type=code&scope=profile email&access_type=offline
+func (o *oauth2) Start(ctx context.Context) error {
+
+	// o.svc.Tokeninfo().Context(ctx)
+
+	return nil
+}
+
+// InputGetToken tokenを取得するために必要なinput
+type InputGetToken struct {
+	ClientID     string `json:"client_id"`
+	ClientSecret string `json:"client_secret"`
+	Code         string `json:"code"`
+	GrantType    string `json:"grant_type"`   // authorization_code
+	RedirectURI  string `json:"redirect_uri"` // http://localhost:3001/auth/google-oauth/callback
+}
+
+func (o *oauth2) Tokens(ctx context.Context, code string) (*model.Token, error) {
+	formData := url.Values{}
+	formData.Set("client_id", o.clientID)
+	formData.Set("client_secret", o.clientSecret)
+	formData.Set("code", code)
+	formData.Set("redirect_uri", o.redirectURI)
+	formData.Set("grant_type", grantTypeCode)
+
+	client := &http.Client{}
+	req, err := http.NewRequest(http.MethodPost, tokenGetURI, strings.NewReader(formData.Encode()))
+	if err != nil {
+		return nil, fmt.Errorf("failed http.NewRequest: %w", err)
+	}
+
+	resp, err := client.Do(req)
+	if err != nil {
+		return nil, fmt.Errorf("failed client.Do: %w", err)
+	}
+	defer resp.Body.Close()
+
+	body, err := io.ReadAll(resp.Body)
+	if err != nil {
+		return nil, fmt.Errorf("failed io.ReadAll: %w", err)
+	}
+
+	output := &dto.OutputGetToken{}
+	if err := json.Unmarshal(body, output); err != nil {
+		return nil, fmt.Errorf("failed json.Unmarshal: body: %s, err: %w", string(body), err)
+	}
+	return output.ToModel(), nil
+}
